--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
-      <link rel="stylesheet" href="https://js.arcgis.com/4.18/esri/themes/light/main.css" />
-      <script src="https://js.arcgis.com/4.18/"></script>
+      <link rel="stylesheet" href="https://js.arcgis.com/4.19/@arcgis/core/assets/esri/themes/light/main.css" />
+<!--      <script src="https://js.arcgis.com/4.18/"></script>-->
   </head>
   <body>
     <noscript>
